# Just-Movies

./: .gitignore  LICENSE  README.md  config.example.json  pyproject.toml
MovieRipper/: __init__.py  __main__.py  clz_index.py  config.py  ffprobe_utils.py  keeper.py  logging_setup.py  movie_index.json  movie_queue.json  picker_ui.py  pipeline.py  queue_ui.py  ripper.py  watcher.py
MovieRipper/webapp/: app.py
MovieRipper/webapp/static/: style.css
MovieRipper/webapp/templates/: _layout.html  config.html  home.html  import.html  queue.html  run.html
docs/: configuration.md
scripts/: 01_build_queue.ps1  02_run_queue.ps1  03_eject.ps1
tests/: test_config.py  test_index_schema.py  test_smoke_import.py  test_webapp.py
