[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "MovieRipper"
version = "0.3.1"
description = "Queue-driven Windows movie ripping helper"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "MovieRipper Contributors"}]

[project.optional-dependencies]
web = ["fastapi", "uvicorn", "jinja2", "python-multipart"]

[project.scripts]
movieripper = "MovieRipper.__main__:main"

[tool.setuptools.packages.find]
include = ["MovieRipper*"]

[tool.setuptools.package-data]
MovieRipper = ["webapp/templates/*.html", "webapp/static/*"]
